--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             value="Submit"
           />
         </form>
+        <h4 class="no-results hidden">No Results Found</h4>
+        <a class="hidden down" href="#results-list"><h2>View Results  <i class="fas fa-angle-double-down"></i></h2></a>
       </section>
     </header>
     <div id="container">
