--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 
   <body>
     <header>
-      <div class="background">
       <section class="app-container">
         <h1 id="title">Search U.S. National Parks Campgrounds</h1>
         <form id="search-form">
-          <label for="">
+          <label>
             Enter State Code: 
           </label>
           <a target="_blank" href="https://abbreviations.yourdictionary.com/articles/state-abbrev.html"><i class="far fa-question-circle"></i></a>
@@ -40,7 +39,6 @@
             id="number-input"
             class="form"
             value="10"
-            maxlength="2"
             min="1"
             max="20"
           />
@@ -58,9 +56,9 @@
     <div id="container">
     <div id="map" class="hidden" > </div>
       <section id="results-list" class="hidden">
+        <h2>Results</h2>
       </section>
     </div>
-   </div>
     <footer>
       <div class="social">
       <p class="display">follow us:</p>
