--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <section class="app-container">
+      <section>
         <h1 id="title">Search U.S. National Parks Campgrounds</h1>
         <form id="search-form">
           <label>
@@ -53,12 +53,9 @@
         <a class="hidden down" href="#results-list"><h2>View Results  <i class="fas fa-angle-double-down"></i></h2></a>
       </section>
     </header>
-    <div id="container">
     <div id="map" class="hidden" > </div>
-      <section id="results-list" class="hidden">
-        <h2>Results</h2>
-      </section>
-    </div>
+    <section id="results-list" class="hidden">
+    </section>
     <footer>
       <div class="social">
       <p class="display">follow us:</p>
@@ -66,12 +63,12 @@
       <a target="_blank" href="https://www.twitter.com/natlparkservice"><i class="fab fa-twitter"></i></a>
       <a target="_blank" href="https://www.instagram.com/nationalparkservice"><i class="fab fa-instagram"></i></a>
       <a target="_blank" href="https://www.youtube.com/nationalparkservice"><i class="fab fa-youtube"></i></a>
-    </div>
-    <p>All rights reserved &copy; Mike Duxbury 2020</p>
+     </div>
+     <p>All rights reserved &copy; Mike Duxbury 2020</p>
     </footer>
       <script defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzx7u7iMI4SuMmNPsj4WcwBclcqjmNNE0&callback=initMap">
-    </script>
+      </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
     <script src="script.js"></script>
